Fixed double scrolling of search results

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -220,7 +220,6 @@
 }
 .search-results {
   flex: 1;
-  overflow-y: scroll;
   overflow-x: hidden;
   padding: 0px 20px;
   background-color: #4a4a4a;
